--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://vainavibalasubramanian.github.io/TODO-REACTJS-PROJECT",
+  "homepage": "https://vainavibalasubramanian.github.io/TODO-REACTJS-project",
   "name": "todo_app",
   "version": "0.1.0",
   "private": true,
@@ -19,8 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
